# atdtool

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Plan.md  README.md  go.mod
.agents/skills/cli-command-change-checklist/: SKILL.md
.agents/skills/docs-sync-after-code-change/: SKILL.md
.agents/skills/helm-values-precedence-review/: SKILL.md
.agents/skills/repo-implementation/: SKILL.md
.agents/skills/repo-testing/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md  go.instructions.md  testing.instructions.md
.github/workflows/: main.yml
cli/values/: options.go  options_test.go
cmake/: CMakeDetermineGoCompiler.cmake  flags.cmake  golang.cmake
cmd/atdtool/: CMakeLists.txt  atdtool.go  exec.go  guid.go  guid_test.go  merge_values.go  merge_values_test.go  setup_singal_unix.go  setup_singal_windows.go  template.go  template_test.go  version.go  watch.go
cmd/logarchive/: CMakeLists.txt  logarchive.go
docs/reference/: template-runtime.md
docs/structure/: chart-values-layout.md  project-structure.md  render-flow.md
docs/usage/: merge-values.md  modules.md  template.md  values-and-overrides.md
internal/pkg/logarchive/: context.go  logarchive.go  logger.go  metric.go  module.go
internal/pkg/noncloudnative/: center.go  deploy.go  deploy_test.go  host.go  layer.go  noncloudnative.go  noncloudnative_test.go  proc.go  tbus.go  tcmcenter.go  whitelist.go
internal/pkg/util/: chart.go  chart_test.go  file.go
pkg/compress/: compress.go  compress_test.go  zstd.go
pkg/snowflake/: snowflake.go  snowflake_test.go
(+29 files in other folders)
